--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -49,11 +49,20 @@
   <div id="contents">
     <img src="stormbringer.gif" width="100%">
 
-  <h1>Game Industry Trends[Lv.8]</h1><br><br><br>
+  <h1>Game Industry Trends[Lv.9]</h1><br><br><br>
 
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=pKvOdNnZ9rE" target="_blank" title="44층 지하던전">
+    [게임야화 3화] 삼국지 『무장 vs 책사』 지력 TOP3 📜 | 무력을 뛰어넘는 신의 한 수</a><br>
+
+  <a href="https://www.youtube.com/watch?v=5_L1AzVZas4" target="_blank" title="44층 지하던전">
+    [게임야화 2화] 삼국지 게임 속 싹쓰리 능력치⚔ 완전 분석!😎 | 여포의 무력과 장비의 지력(?)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=9yRRkTQXJYw" target="_blank" title="44층 지하던전">
+    [게임야화 1화] 삼국지 흥행불패의 이유💯 | 삼국지 14 & 토탈 워 : 삼국</a><br>
 
   <a href="https://www.youtube.com/watch?v=acD55bfkoME" target="_blank" title="44층 지하던전">
     [게임야화 4화] 삼탈워로 보는 병종 특집!🗡🏹🐴 | 병종과 상성</a><br>
