--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -55,6 +55,16 @@
 
 
 
+
+  <a></a><a>[July 30th, 2020]</a>
+
+  <p>
+    plump for, circumspect, retaliation, bemoan, folte-face,<br>
+    a[the] multiplicity of, stonking, commission, turn a deaf ear to, gripe,<br>
+    hoopla, roll out, reconfigure, subside, reprisal
+  </p><br>
+
+
   <a></a><a>[July 29th, 2020]</a>
 
   <p>
