--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -56,6 +56,10 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=-oTgMjH7zDQ" target="_blank" title="쉬운바둑">
+    [실전사활 7강] 의외로 잘 나오는 모양, 급소는?</a><br>
+
   <a href="https://www.youtube.com/watch?v=LJ-x5GYzAYQ" title="인문채널휴 HUE">
     한국사 최고의 전술과 전투(2) - 귀주대첩(수정본)</a><br>
 
