--- a/The_economist.html
+++ b/The_economist.html
@@ -58,6 +58,12 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=9192FTe1Pd4" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    삼성증권 창사 이후 최초의 충격적인 사건! 버티면 살고 못버티면 죽는다!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=QYW3nbZgzxs" target="_blank" title="JD부자연구소">
+    양적완화 이후 투자처는</a><br>
+
   <a href="https://www.youtube.com/watch?v=c__R7O_c_HI" target="_blank" title="JD부자연구소">
     달러지수 93까지... 화폐의 타락 시기, 정답은 000</a><br>
 
