--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -56,7 +56,7 @@
 
 
 
-  <h1>The War of Genesis[Lv.84]</h1><br><br><br>
+  <h1>The War of Genesis[Lv.85]</h1><br><br><br>
 
 
 
@@ -207,11 +207,11 @@
       <a>*</a><a>*</a><a>02. Java - 13. 배열 (개념)</a><br>
       <a>*</a><a>*</a><a>02. Java - 14. 배열 (실습)</a><br>
       <a>*</a><a>*</a><a>02. Java - 15. 리스트 (개념)</a><br>
-      <a>*</a><a>02. Java - 16. 리스트 (실습)</a><br>
-      <a>*</a><a>02. Java - 17. [과제] 중간과제 설명</a><br>
-      <a>*</a><a>02. Java - 19. 클래스 (개념)</a><br>
-      <a>*</a><a>02. Java - 18. [과제] 중간과제 풀이 영상</a><br>
-      <a>*</a><a>02. Java - 20. 클래스 (실습)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 16. 리스트 (실습)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 17. [과제] 중간과제 설명</a><br>
+      <a>*</a><a>*</a><a>02. Java - 19. 클래스 (개념)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 18. [과제] 중간과제 풀이 영상</a><br>
+      <a>*</a><a>*</a><a>02. Java - 20. 클래스 (실습)</a><br>
       <a>*</a><a>02. Java - 21. [과제] 클래스과제 설명</a><br>
       <a>*</a><a>02. Java - 22. 클래스과제 풀이</a><br>
       <a>*</a><a>02. Java - 23. 상속 (개념)</a><br>
