--- a/以虞待不虞者勝.html
+++ b/以虞待不虞者勝.html
@@ -58,7 +58,23 @@
 
 
 
+  <a></a><a><h3>[작전의 네 가지 요령]</h3></a>
+    <p>
+      孫子曰(손자왈)<br>
+      손자는 말한다.<br><br>
 
+      凡治衆(범치중) 如治寡(여치과) 分數是也(분수시야)<br>
+      무릇 많은 수의 병력을 다스리면서 마치 적은 수의 병력을 다스리듯 할 수 있는 것은 분수에 달려있다.<br><br>
+
+      鬪衆如鬪寡(투중여투과) 形名是也(형명시야)<br>
+      많은 수의 병력과 싸우면서 적은 수의 병력과 싸우듯 할 수 있는 것은 형명에 달려 있다.<br><br>
+
+      三軍之衆(삼군지중) 可使必受敵而無敗者(가사필수적이무패자) 奇正是也(기정시야)<br>
+      삼군의 병사들이 적을 맞아 싸우고도 반드시 패배하지 않게 하는 것은 기정에 달려 있다.<br><br>
+
+      兵之所加(병지소가) 加以碬投卵者(가이하투난자) 虛實是也(허실시야)<br>
+      병력을 더 투입하는 것을 마치 숫돌을 던져 달걀을 깨뜨리는 것처럼 할 수 있는 것은 허실에 달려 있다.
+    </p><br>
 
 
   <a></a><a><h3>[완전한 승리로 가는 다섯 가지 길]</h3></a>
