--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -57,6 +57,15 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=JTCvGK-3J7Y&t=1s" target="_blank" title="5분 뚝딱 철학">
+    괴델 : 논리적 신존재 증명</a><br>
+
+  <a href="https://www.youtube.com/watch?v=u7bv1OHBNeI&t=14s" target="_blank" title="5분 뚝딱 철학">
+    베르그송 : 순수지속으로서의 시간</a><br>
+
+  <a href="https://www.youtube.com/watch?v=uQBis-irDf0" target="_blank" title="책갈피">
+    매일 밤 3가지를 해보세요!! "인생이 바뀝니다"</a><br>
+
   <a href="https://www.youtube.com/watch?v=wiuk7utnes0" target="_blank" title="5분 뚝딱 철학">
     사르트르 : 실존은 본질에 앞선다</a><br>
 
