--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -50,12 +50,48 @@
     <img src="천지파열무.jpg" width="100%">
 
 
-  <h1>Strategy & Tactics[Lv.10]</h1><br><br><br>
+  <h1>Strategy & Tactics[Lv.11]</h1><br><br><br>
 
 
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=vuhSe83mMvs" title="인문채널휴 HUE">
+    [임용한의 전쟁사] 마라톤 전투</a><br>
+
+  <a href="https://www.youtube.com/watch?v=IUeMGccAYQg" title="인문채널휴 HUE">
+    한국사 최고의 전술과 전투,베스트10(9)-정기룡의 분전</a><br>
+
+  <a href="https://www.youtube.com/watch?v=n1xl4ftzi_w" title="인문채널휴 HUE">
+    [임용한의 전쟁사] 한국사 최고의 전술과 전투 베스트 10(8)-병인양요와 정족산성 전투</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ewYEhAi2h4I" title="인문채널휴 HUE">
+    [임용한의 전쟁사] 한국사 최고의 전술과 전투, 베스트 10(07)-함관령 전투</a><br>
+
+  <a href="https://www.youtube.com/watch?v=q4Urs9b2RbY" title="인문채널휴 HUE">
+    [임용한의 전쟁사] 한국사 최고의 전술과 전투(6): 관음포 해전</a><br>
+
+  <a href="https://www.youtube.com/watch?v=GlW2uUI9FII" title="인문채널휴 HUE">
+    [임용한의 전쟁사] 조선수군과 이순신에 대한 오해(2) : 이순신에 대한 역대급 오해 5</a><br>
+
+  <a href="https://www.youtube.com/watch?v=qXOmwMWk1E4" title="인문채널휴 HUE">
+    [임용한의 전쟁사] 조선수군에 대한 역대급 오해 1부</a><br>
+
+  <a href="https://www.youtube.com/watch?v=zY4E8QTkm3o" title="인문채널휴 HUE">
+    한국사 최고의 전투와 전술(5)-신라의 군량수송작전</a><br>
+
+  <a href="https://www.youtube.com/watch?v=KE-waFxvUqw" title="인문채널휴 HUE">
+    한국사 최고의 전술과 전투(4)-묘청의 난 2부</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ddBfCNxCmXc" title="인문채널휴 HUE">
+    한국사최고의 전술과 전투(4)-묘청의 난 1부</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Jp1QGfZdXKc" title="인문채널휴 HUE">
+    한국사 최고의 전술과 전투 베스트 10(3) 박서의 귀주성 전투</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xjO7rxY9w9Q" target="_blank" title="쉬운바둑">
+    [실전사활 8강] 양눈목자는 이제부터 입구자로~ (미는것보다 쉽게살기!)</a><br>
 
   <a href="https://www.youtube.com/watch?v=-oTgMjH7zDQ" target="_blank" title="쉬운바둑">
     [실전사활 7강] 의외로 잘 나오는 모양, 급소는?</a><br>
