--- a/The_economist.html
+++ b/The_economist.html
@@ -58,6 +58,22 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=ucZquC7GgU4" target="_blank" title="삼프로TV_경제의신과함께">
+    美 2분기 성장률 -32.9% '쇼크', 2차대전 이후 처음</a><br>
+
+  <a href="https://www.youtube.com/watch?v=VHwHaiSM4EA" target="_blank" title="JD부자연구소">
+    애플 아마존 어닝서프라이즈</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_RFEPwS1lAU" target="_blank" title="삼프로TV_경제의신과함께">
+    반도체·자동차가 돋보인 시장</a><br>
+
+  <a href="https://www.youtube.com/watch?v=pDJB1NKJl28" target="_blank" title="자유잍튜브THE">
+    기업의 주가와 평가는 왜 달라지는가? 노이즈 캔슬링이 필요하다.</a><br>
+
+  <a href="https://www.youtube.com/watch?v=yAEMlqCa0Ag" target="_blank" title="JD부자연구소">
+    2차 대유행때 주목해야 할 주식은</a><br>
+
   <a href="https://www.youtube.com/watch?v=9192FTe1Pd4" target="_blank" title="돈파는가게_세상의 모든 재테크">
     삼성증권 창사 이후 최초의 충격적인 사건! 버티면 살고 못버티면 죽는다!</a><br>
 
