--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -212,11 +212,11 @@
       <a>*</a><a>*</a><a>02. Java - 19. 클래스 (개념)</a><br>
       <a>*</a><a>*</a><a>02. Java - 18. [과제] 중간과제 풀이 영상</a><br>
       <a>*</a><a>*</a><a>02. Java - 20. 클래스 (실습)</a><br>
-      <a>*</a><a>02. Java - 21. [과제] 클래스과제 설명</a><br>
-      <a>*</a><a>02. Java - 22. 클래스과제 풀이</a><br>
-      <a>*</a><a>02. Java - 23. 상속 (개념)</a><br>
-      <a>*</a><a>02. Java - 24. 상속 (실습)</a><br>
-      <a>*</a><a>02. Java - 25. 인터페이스 개념</a><br>
+      <a>*</a><a>*</a><a>02. Java - 21. [과제] 클래스과제 설명</a><br>
+      <a>*</a><a>*</a><a>02. Java - 22. 클래스과제 풀이</a><br>
+      <a>*</a><a>*</a><a>02. Java - 23. 상속 (개념)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 24. 상속 (실습)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 25. 인터페이스 개념</a><br>
       <a>*</a><a>02. Java - 26. 인터페이스 실습</a><br>
       <a>*</a><a>02. Java - 27. 접근제어자 개념</a><br>
       <a>*</a><a>02. Java - 28. 접근제어자 실습</a><br>
