--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -52,12 +52,128 @@
 
 
 
-
-  <h1>The War of Taiji[Lv.16]</h1><br><br><br>
-
+  <h1>The War of Taiji[Lv.19]</h1><br><br><br>
 
 
 
+  <a>WOT IDYA DD(8/2/2020)</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <p>
+    $Chart analysis<br>
+    $Finviz check<br>
+    $Shortsqueeze check<br>
+    $Split history check<br>
+    $Nasdaq check<br>
+    $Press releases scan<br>
+    $SEC filings study<br><br>
+  </p>
+
+  <p>
+    #Form 10-k<br>
+    1. Does the company have high debt & operating cost?<br>
+    2. Do they have cash to cover the burn rate?<br>
+    3. No cash? Has it been long since they last did offering?<br>
+    4. Been a while? Offering is likely coming<br><br>
+
+    * Search keywords<br>
+    revenue<br>
+    operating expense<br>
+    cash equivalents<br>
+    shares outstanding<br>
+    offering<br>
+    warrants<br>
+    convertible notes<br>
+    ATM<br><br>
+
+    #Form S-3</a><br><br>
+
+    *Search keywords<br>
+    shelf
+  </p><br>
+
+
+  <a>WOT Weekly Watchlist Screening & Sorting Procedure(8/2/2020)</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+
+  <a href="https://www.youtube.com/watch?v=vJ5AgtHNnCY" taregt="_blank" target="Humbled Trader">
+    How to find & buy Penny Stock Runners 2020? Reverse Split Strategy (step by step $VIVE)</a><br>
+
+    <a></a>
+    <p>
+      Benzinga Pro FREE trial (use code "HUMBLEDTRADER" to get 25% Off )<br>
+      ▶︎ http://bit.ly/2KXeAqH<br>
+      My Benzinga Tutuorial & Set up<br>
+      ▶︎ https://youtu.be/7iCDSZMv3Uc<br>
+      Trade Ideas Scanner (use code "HUMBLED15" to get 15% Off)<br>
+      ▶︎ http://bit.ly/2mYKie2<br>
+      Shop my Trading Computer Set Up & Trading Books<br>
+      ▶︎ https://www.amazon.com/shop/humbledtr...<br><br>
+
+      1.Why do penny stock companies reverse split their stock?<br>
+      Companies, especially the small caps, become publicly listed to raise money from investors. Most penny stocks are vehicles for inside shareholders to dilute and hence generate cash flow as ATM offerings.<br>
+      So these stocks try very hard to stay listed on Nasdaq, to do so they must keep $1 bid minimum. That's why these stocks reverse split to reduce their share price, and tighten up their float outstanding. So the stock becomes easier to be bid up when they conveniently release PR after the reverse split is finished!<br>
+      That's why we see $VIVE release PR, and Goldman Sachs scooping up some common shares just days after their 1 for 100 reverse split. Someone's definitely making money from this pump, just not the investors.<br><br>
+
+      2. How to find reverse split penny stocks to trade EARLY?<br>
+      I personally use Benzinga pro to screen for recent reverse split stocks that released PR with headline keywords such as "reverse split", "delisting", and "offering". That tells me that these stocks are struggling to stay compliance with Nasdaq, and will do something soon to pump their stock up after the reverse split is finished.<br><br>
+
+      3.How to buy penny stocks early?<br>
+      Theres plenty of money to be made by waking up early. Benzinga pro sends live email alerts whenever the penny stocks I'm tracking release a PR headline, files SEC filing etc. So I already know what to do when I see volume trading above average premarket on $VIVE. I know the support to buy the dips and sell at highs near premarket before dilution happens at the opening spike.
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=4Jyj3xUSIrs" taregt="_blank" target="Humbled Trader">
+    Day Trading Strategies NOW - Sector Sympathy, Institutional Ownership & More! $SPI $YUMA $FRAN $SINT</a><br>
+
+    <a></a>
+    <p>
+      Takeaways<br>
+      1. All the runners are the same sector<br>
+      2. Identify sector leader<br>
+      * Smaller stocks follow sector leader price action<br>
+      3. Sector runs will go higher and last longer than normal
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=rq4jthS3nTA" taregt="_blank" target="Humbled Trader">
+    How to draw Support and Resistance Lines - Indicators, Earnings Gap (Day Trading Beginners $ROKU)</a><br>
+
+    <a></a>
+    <p>
+      Step1: major volume breakout & breakdown<br>
+      Step2: mark visual gaps on the daily<br>
+      Step3: adjust lines to touch 3 price points<br>
+      Tip: swing trade with weekly chart<br>
+    </p><br>
+
+
+  <a href="https://www.youtube.com/watch?v=3gDzKWhBkss" taregt="_blank" target="Humbled Trader">
+    MUST READ Trading Books, Trader Psychology & Discipline - Day Trading for Beginners 2020</a><br>
+
+    <a></a>
+    <p>
+      Trade the Trader<br>
+      ▶︎ https://amzn.to/2ZPyUyB<br>
+      Trading in the Zone<br>
+      ▶︎ https://amzn.to/2ZVup5n<br>
+      Atomic Habits<br>
+      ▶︎ https://amzn.to/2ZRHoVV<br>
+    </p><br>
+
+
+  <a href="http://comhttps//www.youtube/watch?v=2LAEfvae_cI" taregt="_blank" target="Humbled Trader">
+    How to Buy the Dip day trading? Small Account Long strategy $ELTK $LCI $AKTX</a><br>
+
+    <a></a>
+    <p>
+      1. Strong day 1 bounce set up<br>
+      Criteria #1: strong day 1 breakout on daily chart<br>
+      Criteria #2: volume breakout around support line<br><br>
+
+      1. Day 2 morning dip set up(morning panic)<br>
+      Criteria #1: strong day 1 breakout on daily chart<br>
+      Criteria #2: volume breakout around support line
+    </p><br>
 
 
   <a href="https://www.youtube.com/watch?v=TcsKfw4VLFQ" taregt="_blank" target="Humbled Trader">
@@ -68,7 +184,7 @@
       You better run if<br>
       1. Low float<br>
       2. Breaking above daily res<br>
-      3. Daily chart shows room to rip<br>
+      3. Daily chart shows room to rip
     </p><br>
 
 
@@ -89,7 +205,7 @@
 
       1. Create plan before entering<br>
       2. Do not chase break outs<br>
-      3. Risk management is king<br>
+      3. Risk management is king
     </p><br>
 
 
@@ -104,7 +220,7 @@
       * Criteria 1<br>
       Clear extension to the upside on the daily<br>
       * Criteria 2<br>
-      Premarket gap down from prev day close<br>
+      Premarket gap down from prev day close
     </p><br>
 
 
@@ -130,7 +246,7 @@
 
       # Seller's market:<br>
       Longs - day 1 early scalps, no play day 2 & 3<br>
-      Shorts - day 1 short all day fade, possible day 2 & 3<br>
+      Shorts - day 1 short all day fade, possible day 2 & 3
     </p><br>
 
 
@@ -144,7 +260,7 @@
       BOLL: bollinger bands<br>
       IC: Ichimoku Clouds<br>
       MACD<br>
-      RSI: relative strength index<br>
+      RSI: relative strength index
     </p><br>
 
 
