--- a/以虞待不虞者勝.html
+++ b/以虞待不虞者勝.html
@@ -58,6 +58,40 @@
 
 
 
+
+
+
+  <a></a><a><h3>[정공과 기습의 변증법]</h3></a>
+    <p>
+      凡戰者(범전자) 以正合(이정합) 以奇勝(이기승)<br>
+      무릇 전쟁이란 정공법으로 맞서고 기습으로 승리한다.<br><br>
+
+      故善出奇者(고선출기자) 無窮如天地(무궁여천지) 不竭如江河(부갈여강하)<br>
+      따라서 기습을 잘하는 자는 끝이 없는 것이 하늘과 땅 같고, 마르지 않는 것이 강과 바다 같다.<br><br>
+
+      終而復始(종이부시) 日月是也(일월시야)<br>
+      끝났다가 다시 시작되는 것은 해와 달이 차고 기우는 것과 같다.<br><br>
+
+      死而復生(사이부생) 四時是也(사시시야)<br>
+      죽었다가 다시 살아나는 것은 사계절과 같다.<br><br>
+
+      聲不過五(성부과오) 五聲之變(오성지변) 不可勝聽也(부가승청야)<br>
+      소리는 다섯 가지 에 지나지 않지만 다섯 가지 소리의 변화는 이루 다 들을 수 없다.<br><br>
+
+      色不過五(색부과오) 五色之變(오색지변) 不可勝觀也(부가승관야)<br>
+      색깔은 다섯 가지에 지나지 않지만 다섯 색깔의 변화는 이루 다 볼 수 없다.<br><br>
+
+      味不過五(미부과오) 五味之變(오미지변) 不可勝嘗也(부가승상야)<br>
+      맛은 다섯 가지에 지나지 않지만 다섯 가지 맛의 변화는 이루 다 맛볼 수 없다.<br><br>
+
+      戰勢不過奇正(전세부과기정) 奇正之變(기정지변) 不可勝窮之也(부가승궁지야)<br>
+      전쟁의 형세는 기정에 지나지 않지만 기정의 변화는 이루 다 헤아릴 수 없다.<br><br>
+
+      奇正相生(기정상생) 如循環之無端(여순환지무단) 孰能窮之哉(숙능궁지재)<br>
+      기정이 상생하는 것은 마치 순환하는 것이 끝이 없는 것과 같으니 누가 능히 이것을 다 헤아릴 수 있겠는가?
+    </p><br>
+
+
   <a></a><a><h3>[작전의 네 가지 요령]</h3></a>
     <p>
       孫子曰(손자왈)<br>
