--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -50,16 +50,41 @@
   <div id="contents">
     <img src="remember.jpg" width="100%">
 
-    <h1 style="text-align:center">懲毖錄[Lv.10]</h1><br>
+    <h1 style="text-align:center">懲毖錄[Lv.12]</h1><br>
     <h3 style="text-align:center">豫其懲而毖役患(미리 징계하여 후환을 경계한다)<br>
       -『시경(詩經)』 소비편(小毖篇)</h3><br><br>
   <br>
 
 
 
+  <a>신삼국지TV시리즈 E32</a><br>
+  <a>신삼국지TV시리즈 E31</a><br>
+  <a>신삼국지TV시리즈 E30</a><br>
+  <a>신삼국지TV시리즈 E29</a><br>
+  <a>신삼국지TV시리즈 E28</a><br>
+  <a>신삼국지TV시리즈 E27</a><br>
+  <a>신삼국지TV시리즈 E26</a><br>
+  <a>신삼국지TV시리즈 E25</a><br>
 
+  <a></a><a href="https://www.youtube.com/watch?v=bw_vFuDw7oM" title="캐내네 스피치">
+    [최강1교시] EP.02 정사 삼국지 속 난세의 영웅들 I 다시 읽는 삼국지 I 역사학자 임용한</a><br>
 
+  <a></a><a href="https://www.youtube.com/watch?v=BIYdAKyTBl4" title="캐내네 스피치">
+    [최강1교시] EP.01 진수의 정사 삼국지 I 다시 읽는 삼국지 I 역사학자 임용한</a><br>
 
+  <a href="https://www.youtube.com/watch?v=MqeKmqUmclk&t=2s" title="캐내네 스피치">
+    [최강1교시] Full ver. 전쟁사 최고의 전략전술가 알렉산드로스 I 역사학자 임용한</a><br>
+
+  <a href="https://www.youtube.com/watch?v=RWGEgR539-Y" title="삼프로TV_경제의신과함께">
+    남극을 향한 위대한 경쟁, 극지탐험 남극 3부 [지구본연구소 시즌2 - EP.46]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Wx--hncpzBg" title="삼프로TV_경제의신과함께">
+    지구 어디까지 가봤니? 남극, 북극까지 극지 도전의 역사 [지구본연구소 시즌2 - EP.45]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=4_GALoJXffc" title="삼프로TV_경제의신과함께">
+    남극점에 서면 시간은 몇시일까? 89.2도 주인없는 땅 남극 [지구본연구소 시즌2 - EP.44]</a><br>
+
+  <a>신삼국지TV시리즈 E24</a><br>
 
   <a href="https://www.youtube.com/watch?v=A_foNo3Ko_U" title="써에이스쇼">
     삼국지보다 재미있는 정사 초한지 Part 8 (한신 그리고 범증)</a><br>
