--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,11 +50,12 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.69]</h1>
+    <h1>Karazhan Library[Lv.70]</h1>
 
     <p style="margin-top:45px;"><pre>
 
-    <h2><strong>경제[Lv.28]</h2></strong>
+    <h2><strong>경제[Lv.29]</h2></strong>
+      [위험한 일본 경제의 미래]-데이비드 앳킨슨<br>
       [주식투자의 법칙]-제시 리버모어<br>
       [부자들의 습관 버티는 기술]-김광주<br>
       [해외 ETF 백과사전]-김태현<br>
@@ -140,6 +141,15 @@
 
 
 
+
+    <p><pre>
+      <h2>2020년 8월 독서</h2>
+        <li>경제/경영:[위험한 일본 경제의 미래]-데이비드 앳킨슨</li>
+        <li>역사:</li>
+        <li>철학:</li>
+        <li>심리학/처세술:</li>
+        <li>과학:</li>
+    </p></pre>
 
     <p><pre>
       <h2>2020년 7월 독서</h2>
