--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -56,6 +56,16 @@
 
 
 
+
+  <a></a><a>[August 3rd, 2020]</a>
+
+  <p>
+    hash out, irk, dole, abduct, patron,<br>
+    scramble, heretical, austere, epoch, whirr,<br>
+    tacit, wade into, backstop, accommodative, culmination
+  </p><br>
+
+
   <a></a><a>[July 30th, 2020]</a>
 
   <p>
