--- a/The_economist.html
+++ b/The_economist.html
@@ -57,7 +57,11 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=JbvuYWB6uoY" target="_blank" title="삼프로TV_경제의신과함께">
+    틱톡의 美사업 전면 매각.. 빈손으로 철수할까?</a><br>
 
+  <a href="https://www.youtube.com/watch?v=5EWkFGXNX8U" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    주식은 오르는데 연기금은 매도행렬! 이유가 기막혀서</a><br>
 
   <a href="https://www.youtube.com/watch?v=ucZquC7GgU4" target="_blank" title="삼프로TV_경제의신과함께">
     美 2분기 성장률 -32.9% '쇼크', 2차대전 이후 처음</a><br>
