--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -52,11 +52,30 @@
 
 
 
-  <h1>The War of Taiji[Lv.19]</h1><br><br><br>
+  <h1>The War of Taiji[Lv.21]</h1><br><br><br>
 
 
 
-  <a>WOT IDYA DD(8/2/2020)</a><br>
+
+  <a>WOT Chart Objectification & Quick DD</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <br>
+
+  <a>WOT ITP DEEP DD(8/3/2020)</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <p>
+    $Chart analysis<br>
+    $Finviz check<br>
+    $Shortsqueeze check<br>
+    $Split history check<br>
+    $Nasdaq check<br>
+    $Simply WallST check<br>
+    $Press releases scan<br>
+    $SEC filings study
+  </p><br>
+
+
+  <a>WOT IDYA DEEP DD(8/2/2020)</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <p>
     $Chart analysis<br>
@@ -65,8 +84,8 @@
     $Split history check<br>
     $Nasdaq check<br>
     $Press releases scan<br>
-    $SEC filings study<br><br>
-  </p>
+    $SEC filings study
+  </p><br>
 
   <p>
     #Form 10-k<br>
