--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -57,6 +57,10 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=f4nS3sW_48k" target="_blank" title="쉬운바둑">
+    [실전사활 9강] 소목협공정석 이후, 귀에서 수내는 법</a><br>
+
   <a href="https://www.youtube.com/watch?v=vuhSe83mMvs" title="인문채널휴 HUE">
     [임용한의 전쟁사] 마라톤 전투</a><br>
 
