--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,7 +50,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.70]</h1>
+    <h1>Karazhan Library[Lv.71]</h1>
 
     <p style="margin-top:45px;"><pre>
 
@@ -99,7 +99,8 @@
       [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
-    <h2><strong>심리학[Lv.4]</h2></strong>
+    <h2><strong>심리학[Lv.5]</h2></strong>
+      [성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안<br>
       [자제력 수업]-피터 홀린스<br>
       [삶이 괴롭냐고 심리학이 물었다]-게일 브레너<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
@@ -147,7 +148,7 @@
         <li>경제/경영:[위험한 일본 경제의 미래]-데이비드 앳킨슨</li>
         <li>역사:</li>
         <li>철학:</li>
-        <li>심리학/처세술:</li>
+        <li>심리학/처세술:[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</li>
         <li>과학:</li>
     </p></pre>
 
