--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -49,12 +49,39 @@
   <div id="contents">
     <img src="설화난영참.jpg" width="100%">
 
-  <h1>Merriam Webster's[Lv.4]</h1><br><br><br>
+  <h1>Merriam Webster's[Lv.5]</h1><br><br><br>
 
 
 
 
 
+
+
+  <a></a><a>[August 6rd, 2020]</a>
+
+  <p>
+    lowly, tread, prudence, putative, tote,<br>
+    hardy, earthling, stash, regolith, terrestrial,<br>
+    stickler, fret, extant, wane, envisage    
+  </p><br>
+
+
+  <a></a><a>[August 5rd, 2020]</a>
+
+  <p>
+    lambast(e), skinflint, disbursement, grubby, frugal,<br>
+    water down, appease, emblematic, tirage, conurbation,<br>
+    one-off, pristine, trundle, clatter, clutch
+  </p><br>
+
+
+  <a></a><a>[August 4rd, 2020]</a>
+
+  <p>
+    prominence, rule the roost, edifice, crony, sprawling,<br>
+    obsolete, myopia, delegate, holy grail, looming,<br>
+    ravage, piggyback, analogous, gruelling, misgiving
+  </p><br>
 
 
   <a></a><a>[August 3rd, 2020]</a>
