--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -57,6 +57,23 @@
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=GHnGzRLl-O8" target="_blank" title="5분 뚝딱 철학">
+    스피노자 : 범신론</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Fh8W8Q32hXk" target="_blank" title="5분 뚝딱 철학">
+    게티어 : 지식이란 무엇인가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ImE4yEXxkCQ" target="_blank" title="5분 뚝딱 철학">
+    셀리그만 : 긍정 심리학</a><br>
+
+  <a href="https://www.youtube.com/watch?v=hTH_YhCoBJw" target="_blank" title="5분 뚝딱 철학">
+    복희씨 : 주역의 논리적 체계</a><br>
+
+  <a href="https://www.youtube.com/watch?v=nPIEhOIRwSU" target="_blank" title="책갈피">
+    쓰면 쓸수록 가난해지는 4가지 대화법!! "절대 쓰지마세요!"</a><br>
+
   <a href="https://www.youtube.com/watch?v=JTCvGK-3J7Y&t=1s" target="_blank" title="5분 뚝딱 철학">
     괴델 : 논리적 신존재 증명</a><br>
 
