--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -56,7 +56,8 @@
 
 
 
-
+  <a href="https://www.youtube.com/watch?v=-sAFt1ZqV4c" target="_blank" title="쉬운바둑">
+    [실전사활 10강] 한칸협공정석 이후...백이 살아있을까?</a><br>
 
   <a href="https://www.youtube.com/watch?v=f4nS3sW_48k" target="_blank" title="쉬운바둑">
     [실전사활 9강] 소목협공정석 이후, 귀에서 수내는 법</a><br>
