--- a/The_economist.html
+++ b/The_economist.html
@@ -51,11 +51,25 @@
   <img src="blizzardstorm.gif" width="100%">
 
 
-  <h1>The Economist[Lv.23]</h1><br><br><br>
+  <h1>The Economist[Lv.24]</h1><br><br><br>
 
 
 
 
+
+
+
+  <a href="https://www.youtube.com/watch?v=x6g1lo6pYT4" target="_blank" title="삼프로TV_경제의신과함께">
+    금값 1온스당 2천달러 돌파.. 어디까지 갈까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xlgaT2SCI_4" target="_blank" title="JD부자연구소">
+    왜 삼성전자와 애플은 시총이 7배 차이날까</a><br>
+
+  <a href="https://www.youtube.com/watch?v=nNyq4wAGeh4" target="_blank" title="삼프로TV_경제의신과함께">
+    BBIG B(배터리)·B(바이오)·I(인터넷)·G(게임) 그 다음은?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=WUolS4j_o3o" target="_blank" title="JD부자연구소">
+    약달러 시대에 투자해야 할 것은</a><br>
 
   <a href="https://www.youtube.com/watch?v=JbvuYWB6uoY" target="_blank" title="삼프로TV_경제의신과함께">
     틱톡의 美사업 전면 매각.. 빈손으로 철수할까?</a><br>
