--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -52,39 +52,52 @@
 
 
 
-  <h1>The War of Taiji[Lv.21]</h1><br><br><br>
+  <h1>The War of Taiji[Lv.24]</h1><br><br><br>
 
 
 
 
-  <a>WOT Chart Objectification & Quick DD</a><br>
+  <a>WOT Chart Objectification</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <br>
+
+  <a>WOT OAS DEEP DD(8/5/2020)</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <p>
+    $Chart analysis / $Finviz check / $Stocktweet check /
+    $Simply WallST check / $Shortsqueeze check / $Split history check /
+    $Nasdaq check / $Press releases scan / $SEC filings study
+  </p><br>
+
+
+  <a>WOT SCON DEEP DD(8/4/2020)</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <p>
+    $Chart analysis / $Finviz check / $Stocktweet check /
+    $Simply WallST check / $Shortsqueeze check / $Split history check /
+    $Nasdaq check / $Press releases scan / $SEC filings study
+  </p><br>
+
+
+  <a>WOT Chart Objectification</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <br>
 
   <a>WOT ITP DEEP DD(8/3/2020)</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <p>
-    $Chart analysis<br>
-    $Finviz check<br>
-    $Shortsqueeze check<br>
-    $Split history check<br>
-    $Nasdaq check<br>
-    $Simply WallST check<br>
-    $Press releases scan<br>
-    $SEC filings study
+    $Chart analysis / $Finviz check / $Stocktweet check /
+    $Simply WallST check / $Shortsqueeze check / $Split history check /
+    $Nasdaq check / $Press releases scan / $SEC filings study
   </p><br>
 
 
   <a>WOT IDYA DEEP DD(8/2/2020)</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <p>
-    $Chart analysis<br>
-    $Finviz check<br>
-    $Shortsqueeze check<br>
-    $Split history check<br>
-    $Nasdaq check<br>
-    $Press releases scan<br>
-    $SEC filings study
+    $Chart analysis / $Finviz check / $Stocktweet check /
+    $Simply WallST check / $Shortsqueeze check / $Split history check /
+    $Nasdaq check / $Press releases scan / $SEC filings study
   </p><br>
 
   <p>
