--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -55,18 +55,43 @@
 
 
 
+  <a></a><a>[August 13th, 2020]</a>
+
+  <p>
+    bolster, quasi, quell, shun, parliamentarian,<br>
+    incumbent, infiltrate, spurt, terse, saddle,<br>
+    writedown, holiday-maker, reel, oust, bout
+  </p><br>
 
 
-  <a></a><a>[August 6rd, 2020]</a>
+  <a></a><a>[August 12th, 2020]</a>
+
+  <p>
+    alleviate, incumbent, stymie, posthumous, resurgent,<br>
+    aegean, gangbuster, buttonwood, SPAC, levy,<br>
+    obituary, irk, tally, dissent, retaliation
+  </p><br>
+
+
+  <a></a><a>[August 7th, 2020]</a>
+
+  <p>
+    baffle, detriment, reappraissal, suffice, gravitate,<br>
+    exhort, relegate, enabler, peg, revert,<br>
+    heterodox, traction, peeve, sap, furlough
+  </p><br>
+
+
+  <a></a><a>[August 6th, 2020]</a>
 
   <p>
     lowly, tread, prudence, putative, tote,<br>
     hardy, earthling, stash, regolith, terrestrial,<br>
-    stickler, fret, extant, wane, envisage    
+    stickler, fret, extant, wane, envisage
   </p><br>
 
 
-  <a></a><a>[August 5rd, 2020]</a>
+  <a></a><a>[August 5th, 2020]</a>
 
   <p>
     lambast(e), skinflint, disbursement, grubby, frugal,<br>
@@ -75,7 +100,7 @@
   </p><br>
 
 
-  <a></a><a>[August 4rd, 2020]</a>
+  <a></a><a>[August 4th, 2020]</a>
 
   <p>
     prominence, rule the roost, edifice, crony, sprawling,<br>
