--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -51,13 +51,29 @@
     <img src="인간의아이여.jpg" width="100%">
 
 
-  <h1>Show Yourself[Lv.10]</h1><br><br><br>
+  <h1>Show Yourself[Lv.11]</h1><br><br><br>
 
 
 
 
 
 
+
+
+
+  <a href="https://www.youtube.com/watch?v=EWKjK07fgWU" target="_blank" title="5분 뚝딱 철학">
+    칸트 : 순수이성비판 part 1</a><br>
+
+  <a>ST Index 10(8/8/2020)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=-mMtTuhNVnM" target="_blank" title="5분 뚝딱 철학">
+    탈레스 : 만물은 물이다</a><br>
+
+  <a>ST Index 10(8/8/2020)</a><br>
+  <a></a>
+
+  <a>ST Index 30(8/7/2020)</a><br>
+  <a></a><a></a><a></a><a></a><a></a>
 
   <a href="https://www.youtube.com/watch?v=GHnGzRLl-O8" target="_blank" title="5분 뚝딱 철학">
     스피노자 : 범신론</a><br>
