--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -56,6 +56,18 @@
 
 
 
+
+
+
+  <a href="https://www.youtube.com/watch?v=I_kHzz76AeQ" target="_blank" title="쉬운바둑">
+    [실전사활 13강] 화점굳힘 침투사활 - 죽는건 알아요~ 하지만 이용해야죠!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Ht979ygyAwE" target="_blank" title="쉬운바둑">
+    [실전사활 12강] 눈목자굳힘 귀사활. 흑선백사</a><br>
+
+  <a href="https://www.youtube.com/watch?v=iJIQVDbwNdc" target="_blank" title="쉬운바둑">
+    [실전사활 11강] 덮어씌우기정석 이후~ 삼삼침투/패 안내고 그냥살기</a><br>
+
   <a href="https://www.youtube.com/watch?v=-sAFt1ZqV4c" target="_blank" title="쉬운바둑">
     [실전사활 10강] 한칸협공정석 이후...백이 살아있을까?</a><br>
 
