--- a/The_economist.html
+++ b/The_economist.html
@@ -59,6 +59,27 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=rMP-ovAvC60" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    수소전기차에 숨겨진 현대차 급등의 비밀과 반도체 랠리의 진실</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Ai_eqml9vuo" target="_blank" title="JD부자연구소">
+    공유경제에서 소유경제로</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Fo-e06XKZpI" target="_blank" title="삼프로TV_경제의신과함께">
+    미국 코로나 환자 500만명 넘어.. 5개 주 40% 이상 차지</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_Rzmej9PzMc" target="_blank" title="JD부자연구소">
+    의리동맹!!! 4대 도박자금 총집결! 상상초월 유동성!!!_조성연소장(펀펀한 투자연구소)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=uNCE-VfcGrI" target="_blank" title="JD부자연구소">
+    나스닥 11000돌파 사상최고치</a><br>
+
+  <a href="https://www.youtube.com/watch?v=1sGM_40kes4" target="_blank" title="자유잍튜브THE">
+    맞이하라, 20년 만에 찾아오는 기회. 이것은 부의 마지막 사다리</a><br>
+
+  <a href="https://www.youtube.com/watch?v=mLFNspK5bs0" target="_blank" title="JD부자연구소">
+    니콜라, 테슬라, 버진그룹 투자법</a><br>
+
   <a href="https://www.youtube.com/watch?v=x6g1lo6pYT4" target="_blank" title="삼프로TV_경제의신과함께">
     금값 1온스당 2천달러 돌파.. 어디까지 갈까?</a><br>
 
