--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -56,7 +56,7 @@
 
 
 
-  <h1>The War of Genesis[Lv.85]</h1><br><br><br>
+  <h1>The War of Genesis[Lv.86]</h1><br><br><br>
 
 
 
@@ -196,7 +196,7 @@
       <a>*</a><a>*</a><a>02. Java - 02. 변수 (개념)</a><br>
       <a>*</a><a>*</a><a>02. Java - 03. 자료형 (개념)</a><br>
       <a>*</a><a>*</a><a>02. Java - 04. 변수,자료형 (실습)</a><br>
-      <a>*</a><a>02. Java - 05. 메소드 (개념)</a><br>
+      <a>*</a><a>*</a><a>02. Java - 05. 메소드 (개념)</a><br>
       <a>*</a><a>*</a><a>02. Java - 06. 메소드 (실습)</a><br>
       <a>*</a><a>*</a><a>02. Java - 07. 연산자 (개념)</a><br>
       <a>*</a><a>*</a><a>02. Java - 08. 연산 (실습)</a><br>
@@ -217,20 +217,20 @@
       <a>*</a><a>*</a><a>02. Java - 23. 상속 (개념)</a><br>
       <a>*</a><a>*</a><a>02. Java - 24. 상속 (실습)</a><br>
       <a>*</a><a>*</a><a>02. Java - 25. 인터페이스 개념</a><br>
-      <a>*</a><a>02. Java - 26. 인터페이스 실습</a><br>
-      <a>*</a><a>02. Java - 27. 접근제어자 개념</a><br>
-      <a>*</a><a>02. Java - 28. 접근제어자 실습</a><br>
-      <a>*</a><a>02. Java - 29. 제너릭 개념</a><br>
-      <a>*</a><a>02. Java - 30. 파이널 과제 설명</a><br>
-      <a>*</a><a>02. Java - 31. 파이널 과제 풀이</a><br>
-      <a>*</a><a>03. Android - 01. 안드로이드 스튜디오 투어 1</a><br>
-      <a>*</a><a>03. Android - 02. 안드로이드 스튜디오 투어 2</a><br>
-      <a>*</a><a>03. Android - 03. 안드로이드 스튜디오 투어 3</a><br>
-      <a>*</a><a>03. Android - 04. 안드로이드 스튜디오 투어 4</a><br>
-      <a>*</a><a>03. Android - 05. Activity 개념</a><br>
-      <a>*</a><a>03. Android - 06. Activity 실습</a><br>
-      <a>*</a><a>03. Android - 07. Intent 개념</a><br>
-      <a>*</a><a>03. Android - 08. Intent 실습 1</a><br>
+      <a>*</a><a>*</a><a>02. Java - 26. 인터페이스 실습</a><br>
+      <a>*</a><a>*</a><a>02. Java - 27. 접근제어자 개념</a><br>
+      <a>*</a><a>*</a><a>02. Java - 28. 접근제어자 실습</a><br>
+      <a>*</a><a>*</a><a>02. Java - 29. 제너릭 개념</a><br>
+      <a>*</a><a>*</a><a>02. Java - 30. 파이널 과제 설명</a><br>
+      <a>*</a><a>*</a><a>02. Java - 31. 파이널 과제 풀이</a><br>
+      <a>*</a><a>*</a><a>03. Android - 01. 안드로이드 스튜디오 투어 1</a><br>
+      <a>*</a><a>*</a><a>03. Android - 02. 안드로이드 스튜디오 투어 2</a><br>
+      <a>*</a><a>*</a><a>03. Android - 03. 안드로이드 스튜디오 투어 3</a><br>
+      <a>*</a><a>*</a><a>03. Android - 04. 안드로이드 스튜디오 투어 4</a><br>
+      <a>*</a><a>*</a><a>03. Android - 05. Activity 개념</a><br>
+      <a>*</a><a>*</a><a>03. Android - 06. Activity 실습</a><br>
+      <a>*</a><a>*</a><a>03. Android - 07. Intent 개념</a><br>
+      <a>*</a><a>*</a><a>03. Android - 08. Intent 실습 1</a><br>
       <a>*</a><a>03. Android - 09. Intent 실습 2</a><br>
       <a>*</a><a>03. Android - 10. Intent 실습 3</a><br>
       <a>*</a><a>03. Android - 11. Stack 개념</a><br>
