--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -52,9 +52,37 @@
 
 
 
-  <h1>The War of Taiji[Lv.24]</h1><br><br><br>
+  <h1>The War of Taiji[Lv.27]</h1><br><br><br>
 
 
+
+
+
+  <a>WOT Chart Objectification</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <br>
+
+  <a href="https://www.youtube.com/watch?v=OGp4TuMOK7c" taregt="_blank" target="Humbled Trader">
+    How to Buy Penny Stock Runners? $SES $HEPA $BNGO $WWR Weekly Trade Recap</a><br>
+
+  <a href="https://www.youtube.com/watch?v=k_pySJGSz3c" taregt="_blank" target="Humbled Trader">
+    How to build a Day Trading Computer Set up? Best Day Trading Station</a><br>
+
+  <a href="https://www.youtube.com/watch?v=i43WeT6u5rE" taregt="_blank" target="Humbled Trader">
+    Large Cap & Penny Stock Gap Up Short - Day Trading Recap ($SES $OCGN $ROKU $FAST $IRBT)</a><br><br>
+
+  <a>WOT Chart Objectification</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <br>
+
+
+  <a>WOT XELA DEEP DD(8/6/2020)</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <p>
+    $Chart analysis / $Finviz check / $Stocktweet check /
+    $Simply WallST check / $Shortsqueeze check / $Split history check /
+    $Nasdaq check / $Press releases scan / $SEC filings study
+  </p><br>
 
 
   <a>WOT Chart Objectification</a><br>
