--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -57,6 +57,12 @@
 
 
 
+
+
+  <a>신삼국지TV시리즈 E36</a><br>
+  <a>신삼국지TV시리즈 E35</a><br>
+  <a>신삼국지TV시리즈 E34</a><br>
+  <a>신삼국지TV시리즈 E33</a><br>
   <a>신삼국지TV시리즈 E32</a><br>
   <a>신삼국지TV시리즈 E31</a><br>
   <a>신삼국지TV시리즈 E30</a><br>
