--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -49,11 +49,21 @@
   <div id="contents">
     <img src="stormbringer.gif" width="100%">
 
-  <h1>Game Industry Trends[Lv.9]</h1><br><br><br>
+  <h1>Game Industry Trends[Lv.9]</h1><br>
+  <h2 style="text-align:center">Reality is a game</h2><br><br><br>
 
 
 
 
+
+
+
+
+  <a href="https://www.youtube.com/watch?v=a05AYQLlECs" target="_blank" title="NBC News">
+    Live: Trump Holds News Conference | NBC News</a><br>
+
+  <a href="https://www.youtube.com/watch?v=GOsp4F2GJbc" target="_blank" title="그롬마쉬TV">
+    [삼국지14] 아직도 구매를 고민한다면 이걸 꼭 보세요. I 삼국지14 리뷰 & 구매 후기</a><br>
 
   <a href="https://www.youtube.com/watch?v=pKvOdNnZ9rE" target="_blank" title="44층 지하던전">
     [게임야화 3화] 삼국지 『무장 vs 책사』 지력 TOP3 📜 | 무력을 뛰어넘는 신의 한 수</a><br>
