--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,11 +50,13 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.71]</h1>
+    <h1>Karazhan Library[Lv.73]</h1>
 
     <p style="margin-top:45px;"><pre>
 
-    <h2><strong>경제[Lv.29]</h2></strong>
+    <h2><strong>경제[Lv.31]</h2></strong>
+      [부의 대이동]-오건영<br>
+      [Trade the Trader]-Quint Tatro<br>
       [위험한 일본 경제의 미래]-데이비드 앳킨슨<br>
       [주식투자의 법칙]-제시 리버모어<br>
       [부자들의 습관 버티는 기술]-김광주<br>
@@ -100,7 +102,7 @@
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
     <h2><strong>심리학[Lv.5]</h2></strong>
-      [성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안<br>
+      2x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안<br>
       [자제력 수업]-피터 홀린스<br>
       [삶이 괴롭냐고 심리학이 물었다]-게일 브레너<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
@@ -150,6 +152,9 @@
         <li>철학:</li>
         <li>심리학/처세술:[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</li>
         <li>과학:</li>
+        <br>
+        <li>경제:[Trade the Trader]-Quint Tatro</li>
+        <li>경제:[부의 대이동]-오건영</li>
     </p></pre>
 
     <p><pre>
