--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -102,7 +102,7 @@
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
     <h2><strong>심리학[Lv.5]</h2></strong>
-      2x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안<br>
+      <b>3x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</b><br>
       [자제력 수업]-피터 홀린스<br>
       [삶이 괴롭냐고 심리학이 물었다]-게일 브레너<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
