--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -49,10 +49,20 @@
   <div id="contents">
     <img src="설화난영참.jpg" width="100%">
 
-  <h1>Merriam Webster's[Lv.5]</h1><br><br><br>
+  <h1>Merriam Webster's[Lv.6]</h1><br><br><br>
 
 
 
+
+
+
+  <a></a><a>[August 14th, 2020]</a>
+
+  <p>
+    obliterate, blight, defer, strand, grapple,<br>
+    fitfully, emotive, electoral, potent, give/pay heed,<br>
+    fallacy, insular, unblock, bottleneck, opt to
+  </p><br>
 
 
   <a></a><a>[August 13th, 2020]</a>
