--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -50,7 +50,7 @@
     <img src="천지파열무.jpg" width="100%">
 
 
-  <h1>Strategy & Tactics[Lv.11]</h1><br><br><br>
+  <h1>Strategy & Tactics[Lv.12]</h1><br><br><br>
 
 
 
@@ -58,6 +58,9 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=tlcEEcXTjAc" target="_blank" title="쉬운바둑">
+    [실전사활 14강] 양걸침봉쇄 - 구차해도 살아봅시다~</a><br>
 
   <a href="https://www.youtube.com/watch?v=I_kHzz76AeQ" target="_blank" title="쉬운바둑">
     [실전사활 13강] 화점굳힘 침투사활 - 죽는건 알아요~ 하지만 이용해야죠!</a><br>
