--- a/The_economist.html
+++ b/The_economist.html
@@ -51,13 +51,18 @@
   <img src="blizzardstorm.gif" width="100%">
 
 
-  <h1>The Economist[Lv.24]</h1><br><br><br>
+  <h1>The Economist[Lv.25]</h1><br><br><br>
 
 
 
 
 
 
+  <a href="https://www.youtube.com/watch?v=YRJI5PR0N7A" target="_blank" title="증시각도기TV">
+    [증시각도기TV 한국마감]8월13일: 배보다 배꼽이 더 큰 상황 발생</a><br>
+
+  <a href="https://www.youtube.com/watch?v=G3NmA2rCzhc" target="_blank" title="JD부자연구소">
+    현재는 금인가 주식인가</a><br>
 
   <a href="https://www.youtube.com/watch?v=rMP-ovAvC60" target="_blank" title="돈파는가게_세상의 모든 재테크">
     수소전기차에 숨겨진 현대차 급등의 비밀과 반도체 랠리의 진실</a><br>
