--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -51,15 +51,30 @@
     <img src="인간의아이여.jpg" width="100%">
 
 
-  <h1>Show Yourself[Lv.11]</h1><br><br><br>
+  <h1>Show Yourself[Lv.12]</h1><br><br><br>
 
 
 
 
 
 
+  <a href="https://www.youtube.com/watch?v=wNyv84wu_xM" target="_blank" title="5분 뚝딱 철학">
+    비트겐슈타인 : 논리철학논고</a><br>
 
+  <a href="https://www.youtube.com/watch?v=ZRiZsjLkPBE&t=1s" target="_blank" title="5분 뚝딱 철학">
+    칼 융 : 동시성 현상과 홀로그램 우주이론 (feat. 데이비드 봄, 파울리, 스웨덴보그)</a><br>
 
+  <a href="https://www.youtube.com/watch?v=oyd6-DG_waU&t=11s" target="_blank" title="5분 뚝딱 철학">
+    칼 융 : 분석심리학</a><br>
+
+  <a href="https://www.youtube.com/watch?v=pj06HK7yf5g" target="_blank" title="5분 뚝딱 철학">
+    아베로에스 & 토마스 아퀴나스 : 신학과 철학의 문제</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ljsUBJCJWIc&t=1s" target="_blank" title="5분 뚝딱 철학">
+    소쉬르 : 구조주의 언어이론</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_iHR4mimY1s" target="_blank" title="5분 뚝딱 철학">
+    푸코 : 말, 지식, 광기</a><br>
 
   <a href="https://www.youtube.com/watch?v=EWKjK07fgWU" target="_blank" title="5분 뚝딱 철학">
     칸트 : 순수이성비판 part 1</a><br>
