--- a/The_economist.html
+++ b/The_economist.html
@@ -51,12 +51,37 @@
   <img src="blizzardstorm.gif" width="100%">
 
 
-  <h1>The Economist[Lv.25]</h1><br><br><br>
+  <h1>The Economist[Lv.26]</h1><br><br><br>
 
 
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=3FbcwxfiOkE" target="_blank" title="JD부자연구소">
+    주식시장 이제 상승시작이다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=7nAi1zNbsGo" target="_blank" title="자유잍튜브THE">
+    버핏 지수로 본 한국 증시, 고평가? 과열인가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=WKug8NJvX9s" target="_blank" title="JD부자연구소">
+    언택과 컨택을 동시에 만족하는 기업은</a><br>
+
+  <a href="https://www.youtube.com/watch?v=OLSIJ4i7fyg" target="_blank" title="증시각도기TV">
+    [[곽도기 책방] 1929년 세계 대공황은 왜,어떻게 오게 되었을까 『부의 역사 』</a><br>
+
+  <a href="https://www.youtube.com/watch?v=HcyB7PtkBsw" target="_blank" title="자유잍튜브THE">
+    신용융자/빚투 개미 사상 최대, 하락을 준비해야하나?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=V2bmq4ABA_M" target="_blank" title="증시각도기TV">
+    [미국마감] 8월 18일 달러 급락! 그 의미는?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=i-W8v-Rn7PA" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    금값과 달러, 어떻게 될까? 두마리 토끼를 한방에 잡는 좋은 방법!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Ce47nn7yakM" target="_blank" title="JD부자연구소">
+    2차 펜데믹 대응 시나리오</a><br>
 
   <a href="https://www.youtube.com/watch?v=YRJI5PR0N7A" target="_blank" title="증시각도기TV">
     [증시각도기TV 한국마감]8월13일: 배보다 배꼽이 더 큰 상황 발생</a><br>
